--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>Kia</artifactId>
     <version>1.0</version>
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
     </properties>
     <dependencies>
         <dependency>
@@ -48,7 +48,7 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                    <encoding>utf-8</encoding>
+                    <!--<encoding>utf-8</encoding>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -66,10 +66,27 @@
                         </goals>
                     </execution>
                 </executions>
+                <!--<configuration>-->
+                    <!--<encoding>utf-8</encoding>-->
+                <!--</configuration>-->
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <encoding>utf-8</encoding>
+                    <mainClass>ru.kiasystems.model.test.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
 </project>
