--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,11 @@
             <version>4.0</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.4.Final</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.testng</groupId>-->
             <!--<artifactId>testng</artifactId>-->
