--- a/pom.xml
+++ b/pom.xml
@@ -70,23 +70,50 @@
             <version>1.10.0.RELEASE</version>
         </dependency>
 
-        <!--AOP. Need for Spring Data JPA -->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-aspects</artifactId>-->
-        <!--</dependency>-->
-        <!-- Joda-Time - API uses in Spring Data-->
-        <!--<dependency>-->
-            <!--<groupId>joda-time</groupId>-->
-            <!--<artifactId>joda-time</artifactId>-->
-            <!--<version>2.7</version>-->
-        <!--</dependency>-->
-        <!--Joda-Time integration with Hibernate. Save types of date and time -->
-        <!--<dependency>-->
-            <!--<groupId>joda-time</groupId>-->
-            <!--<artifactId>joda-time-hibernate</artifactId>-->
-            <!--<version>1.3</version>-->
-        <!--</dependency>-->
+        <!--Dependency for REST-services-->
+        <!--Отображение объектов Spring на XML-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
+            <version>4.2.5.RELEASE</version>
+        </dependency>
+        <!--Процессор Jackson JSON для поддержки данных в формате JSON-->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-lgpl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+        <!--Баблиотека Castor XML для маршалинга и демаршалинга XML-данных-->
+        <dependency>
+            <groupId>org.codehaus.castor</groupId>
+            <artifactId>castor-xml</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+        <!--Модуль ядра Spring Security-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.0.4.RELEASE</version>
+        </dependency>
+        <!--Веб-модуль Spring Security для защиты веь-служб REST-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>4.0.4.RELEASE</version>
+        </dependency>
+        <!--Модуль конфигурации Spring Security-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>4.0.4.RELEASE</version>
+        </dependency>
+        <!--Библиотека будет использоваться для вызова веб-служб REST-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+<!--end of REST dependencies-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
