--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
         <!--Dependency for REST-services-->
         <!--Отображение объектов Spring на XML-->
         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-oxm</artifactId>
             <version>4.2.5.RELEASE</version>
@@ -82,12 +87,14 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-lgpl</artifactId>
             <version>1.9.13</version>
+            <scope>compile</scope>
         </dependency>
+
         <!--Баблиотека Castor XML для маршалинга и демаршалинга XML-данных-->
         <dependency>
             <groupId>org.codehaus.castor</groupId>
             <artifactId>castor-xml</artifactId>
-            <version>1.4.0</version>
+            <version>1.3.3</version>
         </dependency>
         <!--Модуль ядра Spring Security-->
         <dependency>
@@ -112,6 +119,36 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>4.0.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.0.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
+            <version>4.0.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.4</version>
         </dependency>
 <!--end of REST dependencies-->
         <dependency>
@@ -140,12 +177,6 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.glassfish.main.extras</groupId>-->
-            <!--<artifactId>glassfish-embedded-all</artifactId>-->
-            <!--<version>4.0</version>-->
-            <!--<scope>provided</scope>-->
-        <!--</dependency>-->
     </dependencies>
     <build>
         <finalName>Kiasystems</finalName>
@@ -206,6 +237,16 @@
                 <version>2.6</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>tomcat-maven-plugin</artifactId>
+                <version>1.1</version>
+                <configuration>
+                    <server>Tomcat 9</server>
+                    <url>http://localhost:8080/manager</url>
+                    <path>/${project.artifactId}</path>
                 </configuration>
             </plugin>
         </plugins>
