--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,25 @@
         <!--<persistence-context-ref-name>test</persistence-context-ref-name>-->
         <!--<persistence-unit-name>HibernateJPATest</persistence-unit-name>-->
     <!--</persistence-context-ref>-->
+    <display-name>Spring REST Sample</display-name>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>WEB-INF/Spring/rest-context.xml</param-value>
+    </context-param>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    <servlet>
+        <servlet-name>restful</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/Spring/rest-context.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>restful</servlet-name>
+        <url-pattern>/restful/*</url-pattern>
+    </servlet-mapping>
 </web-app>
