--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+        xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <!--<servlet>-->
         <!--<servlet-name>MainServlet</servlet-name>-->
@@ -15,6 +16,7 @@
     <!--<welcome-file-list>-->
         <!--<welcome-file>/index.html</welcome-file>-->
     <!--</welcome-file-list>-->
+
     <persistence-context-ref>
         <persistence-context-ref-name>main</persistence-context-ref-name>
         <persistence-unit-name>HibernateJPA</persistence-unit-name>
@@ -44,4 +46,12 @@
         <servlet-name>restful</servlet-name>
         <url-pattern>/restful/*</url-pattern>
     </servlet-mapping>
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/restful/*</url-pattern>
+    </filter-mapping>
 </web-app>
