--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,54 +4,94 @@
         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
          http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-    <!--<servlet>-->
-        <!--<servlet-name>MainServlet</servlet-name>-->
-        <!--<servlet-class>ru.kiasystems.controller.MainServlet</servlet-class>-->
-    <!--</servlet>-->
-    <!---->
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>MainServlet</servlet-name>-->
-        <!--<url-pattern>/main</url-pattern>-->
-    <!--</servlet-mapping>-->
-    <!--<welcome-file-list>-->
-        <!--<welcome-file>/index.html</welcome-file>-->
-    <!--</welcome-file-list>-->
 
-    <persistence-context-ref>
-        <persistence-context-ref-name>main</persistence-context-ref-name>
-        <persistence-unit-name>HibernateJPA</persistence-unit-name>
-    </persistence-context-ref>
-    <!--<persistence-context-ref>-->
-        <!--<persistence-context-ref-name>test</persistence-context-ref-name>-->
-        <!--<persistence-unit-name>HibernateJPATest</persistence-unit-name>-->
-    <!--</persistence-context-ref>-->
-    <display-name>Spring REST Sample</display-name>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>WEB-INF/Spring/rest-context.xml</param-value>
+        <param-value>/WEB-INF/Spring/root-context.xml</param-value>
     </context-param>
+    <filter>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
+    <filter>
+        <filter-name>HttpMethodFilter</filter-name>
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>HttpMethodFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter>
+        <filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
+        <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
     <servlet>
-        <servlet-name>restful</servlet-name>
+        <servlet-name>appServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/Spring/rest-context.xml</param-value>
+            <param-value>/WEB-INF/Spring/appServlet/servlet-context.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>restful</servlet-name>
-        <url-pattern>/restful/*</url-pattern>
+        <servlet-name>appServlet</servlet-name>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
-    <filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/restful/*</url-pattern>
-    </filter-mapping>
+    <persistence-context-ref>
+        <persistence-context-ref-name>main</persistence-context-ref-name>
+        <persistence-unit-name>HibernateJPA</persistence-unit-name>
+    </persistence-context-ref>
+
+    <!--<display-name>Spring REST Sample</display-name>-->
+    <!--<context-param>-->
+        <!--<param-name>contextConfigLocation</param-name>-->
+        <!--<param-value>WEB-INF/Spring/rest-context.xml</param-value>-->
+    <!--</context-param>-->
+    <!--<listener>-->
+        <!--<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
+    <!--</listener>-->
+    <!--<servlet>-->
+        <!--<servlet-name>restful</servlet-name>-->
+        <!--<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>-->
+        <!--<init-param>-->
+            <!--<param-name>contextConfigLocation</param-name>-->
+            <!--<param-value>/WEB-INF/Spring/rest-context.xml</param-value>-->
+        <!--</init-param>-->
+        <!--<load-on-startup>1</load-on-startup>-->
+    <!--</servlet>-->
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>restful</servlet-name>-->
+        <!--<url-pattern>/restful/*</url-pattern>-->
+    <!--</servlet-mapping>-->
+    <!--<filter>-->
+        <!--<filter-name>springSecurityFilterChain</filter-name>-->
+        <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>springSecurityFilterChain</filter-name>-->
+        <!--<url-pattern>/restful/*</url-pattern>-->
+    <!--</filter-mapping>-->
 </web-app>
