--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,18 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <!--Зависимости для применения шаблонов Apache Tiles-->
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-core</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-jsp</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+        <!--Конец зависимостей Apache Tiles-->
     </dependencies>
     <build>
         <finalName>Kiasystems</finalName>
